[package]
name = "purge-cache-by-path"
version = "0.1.1"
authors = ["KunoiSayami <46131041+KunoiSayami@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
reqwest = { version = "0.11", features = ["json", "serde_json", "socks"] }
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
env_logger = "0.8"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde_derive = "1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"


[target.aarch64-unknown-linux-musl.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
